--- a/assets/javascript/here_maps_test.html
+++ b/assets/javascript/here_maps_test.html
@@ -32,7 +32,7 @@
     <div id="mapContainer"></div>
         
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <!-- <script src="../javascript/app.js"></script> -->
     <script>
 
