--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <!--Font Resources-->
     <link rel="stylesheet" type="text/css" href="assets/HarabaraHand-font/stylesheet.css">
     <link href="https://fonts.googleapis.com/css?family=Pompiere|Gloria+Hallelujah" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
+
+
 
     <!--Javascript Resources for Here Maps API (these are directed to be in the head tag)-->
     <script src="http://js.api.here.com/v3/3.0/mapsjs-core.js" type="text/javascript" charset="utf-8"></script>
@@ -50,35 +53,46 @@
             </div>
         </div>
     </div>
-
+    
     <!--This is the Page 1 Container, with 3 rows-->
     <div class="container-fluid" id="page1">
-        <!--This is Row 1, Page 1-->
-        <div class="row row1"></div>
-        <!--This is Row 2, Page 1-->
-        <div class="row row2">
-          <div class="col-3" id="page1Left"></div>
-            <div class="col-6" id="page1Center">
-              <h1>Have #NAME?  Let's Travel.</h1>
-              <input type="text" class="formInput" id="userIn" placeholder="Enter Username">
-              <button type="submit" class="btn btn-primary" id="user-submit">Submit</button>
-            </div>
-            <div class="col-3" id="page1Right"></div>
+      <!--This is Row 1, Page 1-->
+      <div class="row row1">
+        <div class="backgroundGlobe">
+          <i class="fas fa-globe-americas backgroundGlobe" id="globe1"></i>
         </div>
-        <!--This is Row 3, Page 1-->
-        <div class="row row3"></div>
+      </div>
+      <!--This is Row 2, Page 1-->
+      <div class="row row2">
+        <div class="col-3" id="page1Left"></div>
+          <div class="col-6" id="page1Center">
+            <h1>Have #NAME?  Let's Travel.</h1>
+
+            <input type="text" class="formInput" id="userIn" placeholder="Enter Username">
+            <button type="submit" class="btn btn-primary" id="user-submit">Submit</button>
+          </div>
+          <div class="col-3" id="page1Right"></div>
+      </div>
+      <!--This is Row 3, Page 1-->
+      <div class="row row3"></div>
     </div>
 
     <!--This is the Page 2 Container, with 1 row-->
     <div class="container-fluid" id="page2">
         <!--This is Row 1, Page 2-->
         <div class="row row4"></div>
-        <!--This is Row 2, Page <i class="fa fa-hourglass-2" aria-hidden="true"></i>-->
+          <div class="backgroundGlobe">
+            <i class="fas fa-globe-asia backgroundGlobe" id="globe2"></i>
+          </div>
+          <div class="backgroundGlobe">
+            <i class="fas fa-globe-africa backgroundGlobe" id="globe3"></i>
+          </div>
+        <!--This is Row 2, Page-->
         <div class="row row5">
           <!--This is the first Input Card-->
           <div class="col-6" id="page2Left">
             <div class="card-body" >  
-              <h5 class="card-title">First, Pick a City</h5>
+              <h5 class="card-title" id="cityCardTitle">First, Pick a City</h5>
               <form>
                 <div class="form-row">
                     <input type="text" class="formInput" placeholder="Paris" id="cityIn">
@@ -148,8 +162,7 @@
         <div class="col-4" id="page4Right">
           <p>Go There...</p>
           <!--This is the flight widget-->
-          <div data-skyscanner-widget="SearchWidget"></div>
-        </div>
+          <div id="searchWidget" style="width:100%;height:92%;"><iframe id="widgetIframe" src="https://www.expedia.com/marketing/widgets/searchform/widget?wtt=1&tp1=5164949&tp2=&lob=H,FH,F&des=&wbi=13&olc=FFFFFF&whf=4&hfc=C7C7C7&wif=4&ifc=000000&wbc=FFCB00&wbf=4&bfc=3D3100&wws=1&sfs=H100RW80R" width="100%" height="92%" scrolling="no" frameborder="0"></iframe></div>        </div>
       </div>
       
     </div>
@@ -165,6 +178,7 @@
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase.js"></script>
+
 
     <!--Flight Widget Resource-->
     <script src="https://widgets.skyscanner.net/widget-server/js/loader.js"></script>
