--- a/resultsPage.html
+++ b/resultsPage.html
@@ -29,32 +29,36 @@
 
     </head>
     <body>
+        <!--Two rows for the results to load in. Each row has 4 columns.-->
         <div class="container-fluid">
             <div class="row row1">
-                <p>1</p>
-                <div class="col-sm-3">
+                <div class="col-3">
+                    <p>2</p>
+                </div>
+                <div class="col-3">
+                    <p>2</p>
+                </div>
+                <div class="col-3">
+                    <p>2</p>
+                </div>
+                <div class="col-3">
                     <p>2</p>
                 </div>
             </div>
             <div class="row row2">
-                <p>3</p>
-                <div class="col-sm-3">
+                <div class="col-3">
+                    <p>4</p>
+                </div>
+                <div class="col-3">
+                    <p>4</p>
+                </div>
+                <div class="col-3">
+                    <p>4</p>
+                </div>
+                <div class="col-3">
                     <p>4</p>
                 </div>
             </div>
-            <div class="row row3">
-                <p>5</p>
-                <div class="col-sm-3">
-                    <p>6</p>
-                </div>
-            </div>
-            <div class="row row4">
-                <p>7</p>
-            </div>
-            <div class="col-sm-3">
-                <p>8</p>
-            </div>
-        </div>
     </body>
 
 </html>
