firebase-javascript-rework

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       </div>
     </div>
 
-    <!--This is the Page 4 Container, with 3 rows-->
+    <!--This is the Page 4 Container, with 5 rows-->
     <div class="container-fluid" id="page4">
       <!--This is Row 1, Page 4-->
       <div class="row row8">
@@ -150,21 +150,27 @@
       </div>
       <!--This is Row 2, Page 4-->
       <div class="row row9">
-        <div class="col-4">
-            <!--This is the sub row of column1 on Page 4-->
-            <div class="row row10">
-              <div class="col-12" id="page4LeftTop"></div>
-            </div>
-            <div class="row row11">
-              <div class="col-12" id="page4LeftBottom"></div>
-            </div>
-        </div>
-        <div class="col-4" id="page4Center"></div>
-        <div class="col-4" id="page4Right">
-          <p>Go There...</p>
-          <!--This is the vacation widget from Expedia-->
-          <div id="searchWidget" style="width:100%;height:92%;"><iframe id="widgetIframe" src="https://www.expedia.com/marketing/widgets/searchform/widget?wtt=1&tp1=5164949&tp2=&lob=H,FH,F&des=&wbi=13&olc=FFFFFF&whf=4&hfc=C7C7C7&wif=4&ifc=000000&wbc=FFCB00&wbf=4&bfc=3D3100&wws=1&sfs=H100RW80R" width="100%" height="92%" scrolling="no" frameborder="0"></iframe></div>        </div>
+        <div class="col-12" id="page4story"></div>
       </div>
+      <!--This is Row 3, Page 4-->
+      <div class="row row10">
+        <div class="col-12" id="page4map">
+          <div id="mapContainer"></div>
+        </div>
+      </div>
+      <!--This is Row 4, Page 4-->
+      <div class="row row11">
+        <div class="col-12" id="page4food"></div>
+      </div>
+      <!--This is Row 5, Page 4-->
+      <div class="row row12">
+          <div class="col-12" id="page4go">
+            <p>Go There...</p>
+            <!--This is the vacation widget from Expedia-->
+            <div id="searchWidget" style="width:80%;height:80%;"><iframe id="widgetIframe" src="https://www.expedia.com/marketing/widgets/searchform/widget?wtt=1&tp1=5164949&tp2=&lob=H,FH,F&des=&wbi=13&olc=FFFFFF&whf=4&hfc=C7C7C7&wif=4&ifc=000000&wbc=FFCB00&wbf=4&bfc=3D3100&wws=1&sfs=H100RW80R" width="80%" height="80%" scrolling="yes" frameborder="0"></iframe></div>
+          </div>
+      </div>
+  
       
     </div>
       
