--- a/index.html
+++ b/index.html
@@ -54,6 +54,70 @@
         </div>
     </div>
     
+    <!--This is Pres1-->
+    <div class="container-fluid" id="pres1">
+        <!--This is Row 1, Page 1-->
+        <div class="row row1">
+          <div class="backgroundGlobe">
+            <i class="fas fa-globe-americas backgroundGlobe" id="globe1"></i>
+          </div>
+        </div>
+        <!--This is Row 2, Page 1-->
+        <div class="row row2">
+          <div class="col-3"></div>
+            <div class="col-6" id="pres1Center">
+              <h1 class="slidetitle">Transpire</h1>
+              <p class="slidecontent">We Inspire Travel</p>
+            </div>
+            <div class="col-3"></div>
+        </div>
+        <!--This is Row 3, Page 1-->
+        <div class="row row3"></div>
+    </div>
+
+    <!--This is Pres2-->
+    <div class="container-fluid" id="pres2">
+      <!--This is Row 1, Page 1-->
+      <div class="row row1">
+        <div class="backgroundGlobe">
+          <i class="fas fa-globe-americas backgroundGlobe" id="globe1"></i>
+        </div>
+      </div>
+      <!--This is Row 2, Page 1-->
+      <div class="row row2">
+        <div class="col-3"></div>
+          <div class="col-6" id="pres2Center">
+              <p class="slidecontent">What are we doing?</p>
+              <p class="slidecontent">How are we doing it?</p>
+          </div>
+          <div class="col-3"></div>
+      </div>
+      <!--This is Row 3, Page 1-->
+      <div class="row row3"></div>
+  </div>
+
+    <!--This is Pres3-->
+    <div class="container-fluid" id="pres3">
+      <!--This is Row 1, Page 1-->
+      <div class="row row1">
+        <div class="backgroundGlobe">
+          <i class="fas fa-globe-americas backgroundGlobe" id="globe1"></i>
+        </div>
+      </div>
+      <!--This is Row 2, Page 1-->
+      <div class="row row2">
+        <div class="col-3"></div>
+          <div class="col-6" id="pres3Center">
+              <p class="slidecontent">What steps did you take to build the app?</p>
+          </div>
+          <div class="col-3"></div>
+      </div>
+      <!--This is Row 3, Page 1-->
+      <div class="row row3"></div>
+  </div>
+  
+
+
     <!--This is the Page 1 Container, with 3 rows-->
     <div class="container-fluid" id="page1">
       <!--This is Row 1, Page 1-->
