scroll reveal added

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script src="https://js.api.here.com/v3/3.0/mapsjs-pano.js" type="text/javascript" charset="utf-8"></script>
     
     <!--Javascript Library (Scroll Reveal must be in head)-->
-    <!-- <script src="https://unpkg.com/scrollreveal"></script> -->
+    <script src="https://unpkg.com/scrollreveal"></script>
 
     
   </head>
