--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       <!--This is Row 3, Page 4-->
       <div class="row row10">
         <div class="col-12" id="page4map">
-          <div id="mapContainer"></div>
+          <div class="load-hidden" id="mapContainer"></div>
         </div>
       </div>
       <!--This is Row 4, Page 4-->
