--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!doctype html>
 <html>
   <head>
-    <title>Travel Planner</title>
+    <title>Transpire-Travel Planner</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- icon stuff -->
+    <link rel="shortcut icon" href="/images/icon1.jpg" type="image/jpeg"/>
+    <link rel="apple-touch-icon" href="/images/icon1.jpg" type="image/jpeg"/>
+	  <link rel="apple-touch-icon" sizes="180x180" href="/images/icon1.png" />
+    <link rel="icon" type="image/png" href="/images/icon1.png" sizes="192x192">
+
+    
+
 
     <!-- CSS Resources -->
     <link rel="stylesheet" type="text/css" href="../project-1-G2/assets/css/reset.css">
