--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+    <!-- icon stuff -->
+    <link rel="shortcut icon" href="/images/icon1.jpg" type="image/jpeg"/>
+    <link rel="apple-touch-icon" href="/images/icon1.jpg" type="image/jpeg"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/icon1.png" />
+    <link rel="icon" type="image/png" href="/images/icon1.png" sizes="192x192">
 
     <!-- CSS Resources -->
     <link rel="stylesheet" type="text/css" href="../project-1-G2/assets/css/reset.css">
@@ -267,7 +273,7 @@
       <!--This is Row 5, Page 4-->
       <div class="row row12">
           <div class="col-12" id="page4go">
-            <p class="page4Title"><i class="fas fa-map-marker pinLeft"></i>Go There...<i class="fas fa-map-marker pinRight"></i></p>
+            <p class="page4Title"><i class="fas fa-map-marker pinLeft"></i>Ready to Go? Book it Right Here!<i class="fas fa-map-marker pinRight"></i></p>
             <!--This is the vacation widget from Expedia-->
             <div id="searchWidget" style="width:100%;height:90%;"><iframe id="widgetIframe" src="https://www.expedia.com/marketing/widgets/searchform/widget?wtt=1&tp1=5164949&tp2=&lob=H,FH,F&des=&wbi=13&olc=FFFFFF&whf=4&hfc=C7C7C7&wif=4&ifc=000000&wbc=FFCB00&wbf=4&bfc=3D3100&wws=1&sfs=H100RW80R" width="100%" height="90%" scrolling="yes" frameborder="0"></iframe></div>
           </div>
