--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <!-- icon stuff -->
-    <link rel="shortcut icon" href="/images/icon1.jpg" type="image/jpeg"/>
-    <link rel="apple-touch-icon" href="/images/icon1.jpg" type="image/jpeg"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/icon1.png" />
-    <link rel="icon" type="image/png" href="/images/icon1.png" sizes="192x192">
+    <link rel="shortcut icon" href="assets/images/icon1.jpg" type="image/jpeg"/>
+    <link rel="apple-touch-icon" href="assets/images/icon1.jpg" type="image/jpeg"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/icon1.png" />
+    <link rel="icon" type="image/png" href="assets/images/icon1.png" sizes="192x192">
 
     <!-- CSS Resources -->
     <link rel="stylesheet" type="text/css" href="../project-1-G2/assets/css/reset.css">
