--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
               <i class="fas fa-city cityIcon"></i>
               <form>
                 <div class="form-row">
-                    <input type="text" class="formInput" placeholder="Paris" id="cityIn">
+                    <input type="text" class="formInput" placeholder="London" id="cityIn">
                 </div>
               </form>
               <a class="btn primaryBtn" href="#" role="button" id="citySubmit">Next</a>
